@@ -1,6 +1,6 @@
-Nov 05, 2017 8:39:16 PM sample.Controller <init>
+Nov 07, 2017 5:00:38 PM sample.Controller <init>
 FINEST: Controller object created and initialized
-Nov 05, 2017 8:39:18 PM sample.FrontEndGUI mainWindowDisplay
+Nov 07, 2017 5:00:40 PM sample.FrontEndGUI mainWindowDisplay
 INFO: Front End User Interface built and displayed
-Nov 05, 2017 8:39:18 PM sample.Main start
+Nov 07, 2017 5:00:40 PM sample.Main start
 INFO: Program begins to execute,   Logger Formatted
