@@ -23,8 +23,12 @@
 10-27 | Sprint 2 | Event Logger (Backend) created and implemented
 10-29 | Sprint 2 | Finished method and dependency parsing methods
 10-30 | Sprint 2 | Fished commenting and formating the FileParser
-10-30 | Sprint 2 | Help button functionality implemented along w/ a help manual
+10-30 | Sprint 2 | Help button functionality implemented along w/ a help manualform
 
 11-05 | Sprint 3 | Bad Path handled in the Destination text field/label
 11-05 | Sprint 3 | Duplicate source file error message handled and implemented properly
 11-05 | Sprint 3 | Alert Box formatting and more error capabilities added
+11-07 | Sprint 3 | 'Select All' button added to GUI along w/ functionality
+11-07 | Sprint 3 | 'Deselect All' button added to GUI along w/ functionality
+11-07 | Sprint 3 | Small cosmetic changes on FrontEndGUI
+
